devops/middleware/istio/humun-envoy-filter copy.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: 402-auth
  namespace: humun-core
spec:
  workloadSelector:
    labels:
      402.sh/enabled: "true"
  configPatches:
  - applyTo: HTTP_FILTER
    match:
      context: SIDECAR_INBOUND
      listener:
        filterChain:
          filter:
            name: "envoy.filters.network.http_connection_manager"
            subFilter:
              name: "envoy.filters.http.router"
    patch:
      operation: INSERT_BEFORE
      value:
       name: envoy.lua
       typed_config:
          "@type": "type.googleapis.com/envoy.extensions.filters.http.lua.v3.Lua"
          inlineCode: |
            function strSplit(i, d)
              if d == nil then
                d = "%s"
              end
              local t={}
              for s in string.gmatch(i, "([^"..d.."]+)") do
                table.insert(t, s)
              end
              return t
            end
            function envoy_on_request(request_handle)
              local forward_headers = { "x-402-token" }
              local path = request_handle:headers():get(":path")
              -- ignore metrics, liveness probe requests
              if path == "/health" or path == "/metrics" then
                return
              end
              request_handle:logInfo("handle request for "..path)
              token = request_handle:headers():get("x-402-token")
              request_handle:logInfo("validating token against 402-service")
              local headers, body = request_handle:httpCall(
                "outbound|80||hpay.humun-client-svcs.svc.cluster.local",
                {
                  [":method"] = "GET",
                  [":authority"] = request_handle:headers():get(":authority"),
                  [":path"] = "/_402?resource="..path,
                  ["x-402-token"] = token,
                },
                nil,
                10000)
              local status
              for header, value in pairs(headers) do
                if header == ":status" then
                  status = value
                  request_handle:logInfo("validation status: "..status)
                end

                for i, f_h in ipairs(forward_headers) do
                  if header ==  f_h then
                    request_handle:logInfo("Adding header to response:"..header)
                    request_handle:headers():add(header, value)
                  end
                end

              end

              request_handle:logInfo("token validation status:"..status)
          
              if status ~= "200" then
                request_handle:respond(headers,body)
                return
              end
            end
